--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
 </div>
 </header>
 
-<section class="containerslider">
+<section class="containers">
+	<div class="containerslider">
 	<div class="left"><img src="./images/leftarrow.png" /></div>
 	<div class="right"><img src="./images/rightarrow.png" /></div>
 	<div class="slider">
 		<div class="phone1"><img src="./images/sliderphone1.png" /></div> 
 		<div class="phone2"><img src="./images/sliderphone2.png" /></div>
+	</div>
 	</div>
 </section>
 
@@ -83,7 +85,8 @@
 </div>
 </section>
 
-<section class="portfolio">
+<section class="portcontainer">
+	<div class="portfolio">
 	<div class="porttitle">
 		<h2> Portfolio </h2> 
 		<p> Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. </p>
@@ -114,6 +117,7 @@
 		<img src="./images/port12.jpg">
 	</div>
 	</div>
+</div>
 </section>
 
 <section class="about">
@@ -166,11 +170,11 @@
 	</figure>
 </div>
 
-
 </div>
 </section> 
 
-<section class="quote">
+<section class="quotecontainer">
+	<div class="quote">
 	<div class="top">
 		<h2> Get a Quote </h2>
 		<p> Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
@@ -184,7 +188,6 @@
 </div>
 
 
-
 <div id="contact">
 	<h3> Contact Information</h3>
 		<p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.</p>
@@ -194,7 +197,7 @@
 		<li> <img src="./images/mail.png"> <a href="mailto:info@singolo.com">info@singolo.com</li>
 </ul>
 
-
+</div>
 </section>
 
 <footer>	
