--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
 </div>
 </section>
 
-<section class="about">
+<section class="aboutcontainer">
+	<div class="about">
 	<h2> About US </h2> 
 	<p class="firstp"> Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh. </p>
 
@@ -131,7 +132,7 @@
 	<figcaption> <h1>Adam Jensen</h1>
 		<p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
 		<ul>
-			<li> <a href="https://www.http://en.wikipedia.org/wiki/RSS.com/" target="blank"> <img src="./images/fb.png" /> </a></li>
+			<li> <a href="https://www.facebook.com/" target="blank"> <img src="./images/fb.png" /> </a></li>
 			<li> <a href="https://www.gmail.com/" target="blank"> <img src="./images/google.png" /></a></li>
 			<li> <a href="https://www.twitter.com/" target="blank"><img src="images/tweet.png" /></a></li>
 			<li> <a href="https://www.linked.com/" target="blank"><img src="images/linkedin.png" /></a></li>
@@ -147,7 +148,7 @@
 			<p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
 		</figcaption>
 			<ul>
-				<li> <a href="https://www.http://en.wikipedia.org/wiki/RSS.com/" target="blank"> <img src="./images/fb.png" /> </a></li>
+				<li> <a href="https://www.facebook.com/" target="blank"> <img src="./images/fb.png" /> </a></li>
 				<li> <a href="https://www.gmail.com/" target="blank"> <img src="./images/google.png" /></a></li>
 				<li> <a href="https://www.twitter.com/" target="blank"><img src="images/tweet.png" /></a></li>
 				<li> <a href="https://www.linked.com/" target="blank"><img src="images/linkedin.png" /></a></li>
@@ -163,7 +164,7 @@
 			<p> Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
 		</figcaption>
 		<ul> 
-			<li> <a href="https://www.http://en.wikipedia.org/wiki/RSS.com/" target="blank"> <img src="./images/fb.png" /> </a></li>
+			<li> <a href="https://www.facebook.com/" target="blank"> <img src="./images/fb.png" /> </a></li>
 			<li> <a href="https://www.gmail.com/" target="blank"> <img src="./images/google.png" /></a></li>
 			<li> <a href="https://www.twitter.com/" target="blank"><img src="images/tweet.png" /></a></li>
 			<li> <a href="https://www.linked.com/" target="blank"><img src="images/linkedin.png" /></a></li>
